tests/integration/error/unknown_type.alo
// expect-error: Unknown type 'missing_type'

fun main() -> void {
    imut value: missing_type = 1;
}
